--- a/index.css
+++ b/index.css
@@ -1,9 +1,21 @@
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
+
+:root {
+    --ff:'Archivo Black', sans-serif;
+
+    /* colors */
+    --bg-color-primary: #f067e583;
+    --bg-color-secondary: #5C44B6; 
+    --ff-color: #25165a;
+}
+
 html, body {
     margin: 0;
     padding: 0;
-    font-family: 'Rubik', sans-serif;
-    background-color: #EEF0F4;
-    color: #432000;
+    font-family:var(--ff);
+    background-color: #D6D6E7;
+    color: var(--ff-color);
     user-select: none;
 }
 
@@ -12,6 +24,9 @@ html, body {
     flex-direction: column;
     max-width: 320px;
     margin: 30px auto;
+    padding: 15%;
+    border-radius: 8px;
+
 }
 
 img {
@@ -19,33 +34,72 @@ img {
     margin: 0 auto;
 }
 
+
+
 input {
-    color: #432000;
-    background-color: #DCE1EB;
+    color: var(--bg-color-secondary);
+    background-color: #fdf6f073;
     border: 0;
     padding: 15px;
     border-radius: 8px;
     font-size: 20px;
     text-align: center;
-    font-family: 'Rubik', sans-serif;
+    font-family: var(--ff);
     margin: 10px 0;
 }
 
 button {
     color: #FDFDFD;
-    background-color: #AC485A;
+    background-color: var(--bg-color-secondary);
     border: 0;
     padding: 15px;
     border-radius: 8px;
     font-size: 20px;
     text-align: center;
-    font-family: 'Rubik', sans-serif;
+    font-family: var(--ff);
+
+    /* styles */
+
+  align-items: center;
+  appearance: none;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-flex;
+  justify-content: center;
+  line-height: 1;
+  overflow: hidden;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
 }
 
-button:hover {
+button:focus {
+    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  }
+  
+  button:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    filter: invert(25%);
+    transform: translateY(-2px);
+  }
+  
+  button:active {
+    box-shadow: #D6D6E7 0 3px 7px inset;
+    transform: translateY(2px);
+  }
+
+/* button:hover {
     background-color: #432000;
     cursor: pointer;
-}
+} */
 
 ul {
     list-style-type: none;
@@ -57,15 +111,20 @@ ul {
 
 ul li {
     font-size: 20px;
-    background-color: #FFFDF8;
+    background-color: var(--bg-color-primary);
+    color: var(--bg-color-secondary);
     padding: 15px;
     border-radius: 8px;
     flex-grow: 1;
     text-align: center;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
+    font-weight: 700;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
 ul li:hover {
-    background-color: #FFECC7;
+    background-color: var(--bg-color-primary);
+    color: var(--bg-color-secondary);
+    filter:invert(25%);
     cursor: pointer;
+
 }
